validate:scenario: Wait for ASYNC_DONE to set async state change DONE

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=769894